2008-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/include/powerpc-utility.h: Changed special purpose register
	inline functions to macros.  Added macros to set and clear bits for
	SPRs and DCRs.

	* new-exceptions/raw_exception.c: The watchdog exception for e200 is
	now asynchronous.

	* mpc83xx/gtm/gtm.c: Bugfix for some value assignments.

	* mpc55xx/include/watchdog.h: New file.

	* Makefile.am: Install mpc55xx/include/watchdog.h for MPC55XX.

2008-07-18	Thomas Doerfler <thomas.doerfler@embedded-brains.de>

	* mpc83xx/network/tsec.c: Initialize PHY registers late enough,
	so that phy access is possible

2008-07-17	Thomas Doerfler <thomas.doerfler@embedded-brains.de>

	* rtems/powerpc/powerpc.h:
	ppc405 uses definitions distinct from ppc403 now
	* shared/src/cache_.h: Use correct powerpc.h to get cache attributes

	
2008-07-17	Thomas Doerfler <thomas.doerfler@embedded-brains.de>

	* shared/include/powerpc-utility.h:
	Fixed typo in access macros for device control registers (DCR)
	
2008-07-16	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/bspsupport/vectors_init.c: added
	features to C_exception_handler() (the default global
	handler):
	 - try to catch recursion
	 - print info about context where the exception occurred
	   (ISR or task with task ID).
	 - suspend offending task rather than spinning forever.
	
2008-07-16	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/bspsupport/vectors_init.c: must not
	align start of stack downwards (we don't 'own' memory
	below start). Instead, use original boundaries but
	align the stack pointer as required.

	Added test to verify that R13 was loaded with _SDA_BASE_
	during early initialization (low-level assembly code
	relies on it).

2008-07-16	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/cpu.c: propagate R2 to all task contexts
	even if the ABI is SVR4. Cannot hurt...

2008-07-16	Till Straumann <strauman@slac.stanford.edu>
